# flagbot

./: .dockerignore  Cargo.toml  Dockerfile  README.md  env.sample  flags.sample
.github/workflows/: docker.yml
src/: main.rs
