[package]
name = "flagbot"
version = "0.1.0"
authors = ["Nathan Graule <solarliner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8"
serenity = "0.8"
regex = "1.4"
lazy_static = "1.4"
log = "0.4"
